--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,35 @@
-/* 
+body {
+    background-color: green;
+    padding: 0;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.main-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 
-*/
+.counter-wrapper {
+    display: flex;
+    background-color: black;
+    padding: 10px;
+}
+
+.counter-digit {
+    justify-content: center;
+    width: 70px;
+    height: 100px;
+    margin: 1px;
+    background-color: lightslategrey;
+    color: white;
+    font-size: 60px;
+    display: flex;
+    border-radius: 10px;
+    align-items: center;
+}
+
+.counter-digit.icon {
+    font-size: 60px;
+    justify-content: center;
+}
